--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,19 @@ h1 {
     border-radius: 5px;
 }
 
+#camera-virtual {
+    width : 100%;
+    max-width: 1200px;
+    order : 3;
+}
+
+#camera-virtual img {
+    max-width: 100%;
+    width: 100%;
+    height : auto;
+    min-height: 600px;
+}
+
 .loading {
     filter : grayscale(1);
     opacity: 0.7;
